<resources>
    <string name="app_name">AvaTellAndroid</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="country">Country</string>
    <string name="zip">Zip Code</string>
    <string name="welcome_to_avatell">Welcome to AvaTell</string>
    <string name="tap_below_to_login">Tap the logo to login!</string>
    <string name="taxcode">TaxCode</string>
    <string name="description">Description</string>
    <string name="company_code">Company Code</string>
    <string name="customer_code">Customer Code</string>
    <string name="amount">Amount</string>
    <string name="quantity">Quantity</string>
    <string name="company">Company</string>
    <string name="customer">Customer</string>
    <string name="fill_out_the_above_or_below_fields_and_hit_submit">Fill out the above or below fields and hit submit</string>
    <string name="panos">Panos</string>
    <string name="paul">Paul</string>
    <string name="amy">Amy Cohen</string>
    <string name="amy_profile">I am a Java developer and a passionate team leader. With a background in physical product design, management, and customer service, I excel at process and organization. Combined with these skills, I create code that delivers brand promises.</string>
    <string name="panos_profile">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>
    <string name="paul_profile">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. </string>
    <string name="search_for_a_tax_rate_by_zip_code">Search For a Tax Rate by Zip Code</string>
    <string name="trying_to_load_data_from_api">Trying to load data from API...</string>
    <string name="tax_response">Tax Response</string>
    <string name="search_details">Search Details:</string>


    <string name="currency">Currency</string>
    <string name="order_amount">Order Amount</string>
    <string name="exempt_amount">Exempt Amount</string>
    <string name="taxable_amount">Taxable Amount</string>
</resources>
