<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/avatellBackground">


    <ImageView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="126dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        android:background="@color/avatellBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/avatell2" />

    <ImageView
        android:id="@+id/groupPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/group_photo_banner"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0sp"
        app:layout_constraintTop_toBottomOf="@id/groupPhoto"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp">

<!--PANOS-->
            <TextView
                android:id="@+id/panos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/panos"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/avatellSplashPageText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/panos_profile"
                android:textAlignment="textStart"
                android:textColor="@color/avatellSplashPageText" />

<!--PAUL-->
            <TextView
                android:id="@+id/paul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paul"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/avatellSplashPageText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/paul_profile"
                android:textAlignment="textStart"
                android:textColor="@color/avatellSplashPageText" />

<!--AMY-->
            <TextView
                android:id="@+id/amy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amy"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/avatellSplashPageText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amy_profile"
                android:textAlignment="textStart"
                android:textColor="@color/avatellSplashPageText" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>